# Autonomous-driving

./: README.md
Autonomous_driving/: README.md
Autonomous_driving/my_turtle/: CMakeLists.txt  README.md  package.xml
Autonomous_driving/my_turtle/launch/: move_turtle.launch  my_turtle_in_free.launch  myturtle_in_stage.launch  myturtle_tas.launch
Autonomous_driving/my_turtle/src/: move_turtle.cpp  stopper.cpp  stopper.h
Autonomous_driving/my_turtle/world/: free.world  maze.world  turtlebot.inc
Autonomous_driving/simple_navigation_goals/src/: main.cpp
Autonomous_driving/slalom/: CMakeLists.txt  README.md  package.xml
Autonomous_driving/slalom/cmake/: FindLIBIGL.cmake
Autonomous_driving/slalom/src/: point_catcher.cpp  point_catcher.h  point_catcher_node.cpp  pylon_detector.cpp  pylon_detector.h  pylon_detector_node.cpp  slalom.cpp  slalom.h  slalom_2.cpp  slalom_2.h  slalom_2_node.cpp  slalom_node.cpp
Autonomous_driving/slalom_2/: CMakeLists.txt  ReadMe.md  package.xml
Autonomous_driving/slalom_2/include/: slalom.h
Autonomous_driving/slalom_2/launch/: slalom.launch  slalom.launch~
Autonomous_driving/slalom_2/nodes/: slalom_node.cpp
Autonomous_driving/slalom_2/src/: slalom.cpp
Autonomous_driving/tas/launch/: ekf.launch  fernando.launch  odom_alt.launch  odom_gmap.launch
Autonomous_driving/tas/launch/config/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
Autonomous_driving/tas/shell_scripts/: 10-tas.rules  tas_rviz.rviz
Autonomous_driving/tas_autonomous_control/src/: tas_autonomous_control_node.cpp  tas_autonomous_control_node_old.cpp
Autonomous_driving/tas_autonomous_control/src/control/: control (copy).cpp  control.cpp  control.h
Autonomous_driving/tf2odom/: CMakeLists.txt  README.md  package.xml
Autonomous_driving/tf2odom/src/: hello.cpp  hello.h  hello_node.cpp  imu.cpp  imu.h  imu_node.cpp
