<?xml version="1.0"?>
<package>
  <name>slalom_2</name>
  <version>1.0.6</version>
  <description>Package for driving a slalom parcour</description>

  <maintainer email="hao.xu@tum.de">Hao Xu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>

  </export>
</package>
